# rust-example-ffi-cpp

./: .gitignore  Cargo.toml  README.md
cpp/: CMakeLists.txt  counter.cpp  counter.hpp
src/: ffi.rs
